correct computation of visible view in multi view

--- a/viewer/style/buttons.less
+++ b/viewer/style/buttons.less
@@ -563,6 +563,9 @@
   &.ItemsView{
     .iconButton('list-200.svg');
   }
+  &.SectionView{
+    .iconButton('category-200.svg');
+  }
 }
 
 .dialogButton{
